Fix Vercel config: use rootDirectory instead of custom build commands

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-  "buildCommand": "cd TeacherWishlist && npm run build",
-  "outputDirectory": "TeacherWishlist/.next",
-  "installCommand": "cd TeacherWishlist && npm install",
-  "framework": "nextjs"
+  "rootDirectory": "TeacherWishlist"
 } 
